# apps/product-service/src/routes/product.route.ts
@@ -16,6 +16,7 @@ import {
   getProducts,
   restoreProduct,
   searchProducts,
+  topShops,
   uploadProductImage,
 } from "../controllers/product.controller";
 import isAuthenticated from "@packages/middleware/isAuthenticated";
@@ -40,5 +41,6 @@ router.get("/get-filtered-products", getFilteredProducts);
 router.get("/get-filtered-offers", getFilteredEvents);
 router.get("/get-filtered-shops", getFilteredShops);
 router.get("/search-products", searchProducts);
+router.get("/top-shops", topShops);
 
 export default router;
